// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calendar /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="react-calendar"
  >
    <div
      class="react-calendar__navigation"
    >
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__prev2-button"
        type="button"
      >
        «
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__prev-button"
        type="button"
      >
        ‹
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__label"
        style="flex-grow: 1;"
        type="button"
      >
        <span
          class="react-calendar__navigation__label__labelText react-calendar__navigation__label__labelText--from"
        >
          May 2022
        </span>
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__next-button"
        type="button"
      >
        ›
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__next2-button"
        type="button"
      >
        »
      </button>
    </div>
    <div
      class="react-calendar__viewContainer"
    >
      <div
        class="react-calendar__month-view"
      >
        <div
          style="display: flex; align-items: flex-end;"
        >
          <div
            style="flex-grow: 1; width: 100%;"
          >
            <div
              class="react-calendar__month-view__weekdays"
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Monday"
                  title="Monday"
                >
                  Mon
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Tuesday"
                  title="Tuesday"
                >
                  Tue
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Wednesday"
                  title="Wednesday"
                >
                  Wed
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Thursday"
                  title="Thursday"
                >
                  Thu
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday react-calendar__month-view__weekdays__weekday--current"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Friday"
                  title="Friday"
                >
                  Fri
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday react-calendar__month-view__weekdays__weekday--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Saturday"
                  title="Saturday"
                >
                  Sat
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday react-calendar__month-view__weekdays__weekday--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Sunday"
                  title="Sunday"
                >
                  Sun
                </abbr>
              </div>
            </div>
            <div
              class="react-calendar__month-view__days"
              style="display: flex; flex-wrap: wrap;"
            >
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 25, 2022"
                >
                  25
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 26, 2022"
                >
                  26
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 27, 2022"
                >
                  27
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 28, 2022"
                >
                  28
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 29, 2022"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 30, 2022"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 1, 2022"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 2, 2022"
                >
                  2
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 3, 2022"
                >
                  3
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 4, 2022"
                >
                  4
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 5, 2022"
                >
                  5
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 6, 2022"
                >
                  6
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 7, 2022"
                >
                  7
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 8, 2022"
                >
                  8
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 9, 2022"
                >
                  9
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 10, 2022"
                >
                  10
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 11, 2022"
                >
                  11
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 12, 2022"
                >
                  12
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 13, 2022"
                >
                  13
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 14, 2022"
                >
                  14
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 15, 2022"
                >
                  15
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 16, 2022"
                >
                  16
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 17, 2022"
                >
                  17
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 18, 2022"
                >
                  18
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 19, 2022"
                >
                  19
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 20, 2022"
                >
                  20
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 21, 2022"
                >
                  21
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__tile--active react-calendar__tile--range react-calendar__tile--rangeStart react-calendar__tile--rangeEnd react-calendar__tile--rangeBothEnds react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 22, 2022"
                >
                  22
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 23, 2022"
                >
                  23
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 24, 2022"
                >
                  24
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 25, 2022"
                >
                  25
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 26, 2022"
                >
                  26
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 27, 2022"
                >
                  27
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 28, 2022"
                >
                  28
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 29, 2022"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 30, 2022"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 31, 2022"
                >
                  31
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 1, 2022"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 2, 2022"
                >
                  2
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 3, 2022"
                >
                  3
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 4, 2022"
                >
                  4
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 5, 2022"
                >
                  5
                </abbr>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Calendar /> should render correctly 2`] = `
<DocumentFragment>
  <div
    class="react-calendar"
  >
    <div
      class="react-calendar__navigation"
    >
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__prev2-button"
        type="button"
      >
        «
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__prev-button"
        type="button"
      >
        ‹
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__label"
        style="flex-grow: 1;"
        type="button"
      >
        <span
          class="react-calendar__navigation__label__labelText react-calendar__navigation__label__labelText--from"
        >
          May 2022
        </span>
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__next-button"
        type="button"
      >
        ›
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__next2-button"
        type="button"
      >
        »
      </button>
    </div>
    <div
      class="react-calendar__viewContainer"
    >
      <div
        class="react-calendar__month-view"
      >
        <div
          style="display: flex; align-items: flex-end;"
        >
          <div
            style="flex-grow: 1; width: 100%;"
          >
            <div
              class="react-calendar__month-view__weekdays"
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Monday"
                  title="Monday"
                >
                  Mon
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Tuesday"
                  title="Tuesday"
                >
                  Tue
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Wednesday"
                  title="Wednesday"
                >
                  Wed
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Thursday"
                  title="Thursday"
                >
                  Thu
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday react-calendar__month-view__weekdays__weekday--current"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Friday"
                  title="Friday"
                >
                  Fri
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday react-calendar__month-view__weekdays__weekday--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Saturday"
                  title="Saturday"
                >
                  Sat
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday react-calendar__month-view__weekdays__weekday--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Sunday"
                  title="Sunday"
                >
                  Sun
                </abbr>
              </div>
            </div>
            <div
              class="react-calendar__month-view__days"
              style="display: flex; flex-wrap: wrap;"
            >
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 25, 2022"
                >
                  25
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 26, 2022"
                >
                  26
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 27, 2022"
                >
                  27
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 28, 2022"
                >
                  28
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 29, 2022"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="April 30, 2022"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 1, 2022"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 2, 2022"
                >
                  2
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 3, 2022"
                >
                  3
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 4, 2022"
                >
                  4
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 5, 2022"
                >
                  5
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 6, 2022"
                >
                  6
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 7, 2022"
                >
                  7
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 8, 2022"
                >
                  8
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 9, 2022"
                >
                  9
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 10, 2022"
                >
                  10
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 11, 2022"
                >
                  11
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 12, 2022"
                >
                  12
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 13, 2022"
                >
                  13
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 14, 2022"
                >
                  14
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 15, 2022"
                >
                  15
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 16, 2022"
                >
                  16
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 17, 2022"
                >
                  17
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 18, 2022"
                >
                  18
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 19, 2022"
                >
                  19
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 20, 2022"
                >
                  20
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 21, 2022"
                >
                  21
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__tile--active react-calendar__tile--range react-calendar__tile--rangeStart react-calendar__tile--rangeEnd react-calendar__tile--rangeBothEnds react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 22, 2022"
                >
                  22
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 23, 2022"
                >
                  23
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 24, 2022"
                >
                  24
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 25, 2022"
                >
                  25
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 26, 2022"
                >
                  26
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 27, 2022"
                >
                  27
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 28, 2022"
                >
                  28
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 29, 2022"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 30, 2022"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="May 31, 2022"
                >
                  31
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 1, 2022"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 2, 2022"
                >
                  2
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 3, 2022"
                >
                  3
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                disabled=""
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 4, 2022"
                >
                  4
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 5, 2022"
                >
                  5
                </abbr>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
